[project]
name = "agents-in-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.0.0",
    "python-dotenv>=0.9.9",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.68",
    "langchain-groq>=0.3.5",
    "requests>=2.32.4",
]


